--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "comigo-tech-react-input-mask": "^3.0.0-alpha.3",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
+    "react-dadata": "^2.23.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
